fix clipped descenders

--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -507,6 +507,7 @@ body {
 
 .relatedAssetContainer {
     .panel-title {
+        line-height: normal;
         .truncatedTitle {
             display: inline-block;
             width: 84%;
